# pywrparser-flask

./: README.md  pyproject.toml
pywr_upload/: app.py  config.py
pywr_upload/pywr_upload/: __init__.py  routes.py
pywr_upload/pywr_upload/static/css/: PywrValidationModal.css
pywr_upload/pywr_upload/static/js/: ParseResult.js  ProgressCircle.js  PywrValidationModal.js
pywr_upload/pywr_upload/templates/: index.html
