[tool.poetry]
name = "pywr-upload"
version = "0.1.0"
description = ""
authors = ["Paul Slavin <pmslavin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
nox = "^2022.11.21"
flake8 = "^6.0.0"
coverage = "^7.0.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
